[package]
name = "ecwasm"
version = "0.1.0"
authors = ["Stephen Sadowski (q) <stephen.sadowski@clyx.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"]  }
web-sys = { version = "0.3.42", features = ['Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'console'] }
js-sys = "0.3.42"
wasm-bindgen-futures = "0.4.15"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "^1.0.56"



